[package]
name = "bmssp"
version = "0.1.0"
edition = "2024"
description = "The BMSSP algorithm"
license = "Apache-2.0"
repository = "https://github.com/lucas-montes/bmssp"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
categories = ["algorithms"]
keywords = ["shortest-path", "search", "graph"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "plotters"] }
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }
rand = "0.9.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = "1.0"

[[bench]]
name = "compare"
path = "benches/compare.rs"
harness = false

[[bench]]
name = "compare_internet"
path = "benches/compare_internet.rs"
harness = false



